k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
     name: auth-deployment

spec:
     selector:
          matchLabels:
               app: auth
     replicas: 1
     minReadySeconds: 15
     strategy:
          type: RollingUpdate
          rollingUpdate:
               maxUnavailable: 1
               maxSurge: 1
     template:
          metadata:
               labels:
                    app: auth
          spec:
               containers:
                    - image: DOCKER_IMAGE
                      imagePullPolicy: Always
                      command:
                           - /bin/sh
                           - -c
                           - |
                                yarn db:push
                                yarn start
                      name: auth-pod
                      ports:
                           - containerPort: 3000
                      resources:
                           requests:
                                memory: "256Mi"
                                cpu: "0.5"
                           limits:
                                memory: "512Mi"
                                cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
     name: auth-service

spec:
     type: NodePort
     ports:
          - port: 3000
            targetPort: 3000
     selector:
          app: auth
