k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
     name: hello-kubernetes
     annotations:
          alb.ingress.kubernetes.io/scheme: internet-facing
          kubernetes.io/ingress.class: alb
spec:
     rules:
          - http:
                 paths:
                      - path: /auth
                        pathType: Prefix
                        backend:
                             service:
                                  name: auth-service
